t+ps:[[خبرې کول]] ([[WT:EDIT|Assisted]]) <speak#41979328>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -184,6 +184,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Old Provençal: {{t|pro|parlar}}
 * Old Saxon: {{t|osx|sprekan}}
 * Ossetian: {{t-needed|os}}
+* Pashto: {{t+|ps|خبرې کول|tr=xabǝ́re kawǝ́l}}
 * Persian: {{t+|fa|حرف زدن|tr=harf zadan}}
 * Pipil: {{t|ppl|taketza}}, {{t|ppl|taquetza}}
 * Pitjantjatjara: {{t-needed|pjt}}
