--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -80,7 +80,7 @@ When translated as "[[be|to be]]", {{lang|zh|是}} is used only to link two noun
 The correct sentence is
 : {{zh-x|這 很 好|This '''is (very)''' good}}
 Here, {{zh-l|很}} is used as a filler to link a noun and an adjective and is not interpreted as "very". Not using it would sound unnatural.
-A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的}} after the adjective to turn it into a noun.
+A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的|tr=de}} after the adjective to turn it into a noun.
 : {{zh-x|那 隻 猫 是 黑 的|This cat is black (This cat is a black one)}}}}
 
 ====Synonyms====
