--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -1,6 +1,7 @@
 {{also|israel|Ísrael|Israèl|İsrael|Israël}}
 ==English==
-[[File:Emblem of Israel.svg|thumb|Emblem of Israel]]
+[[File:Flag of Israel.svg|thumb|Flag of the State of Israel]]
+[[File:ISR orthographic.svg|thumb|Location map of the State of Israel]]
 
 ===Alternative forms===
 * {{l|en|Isr.}} {{qualifier|abbreviation}}
