--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -32,31 +32,35 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 #: {{ux|en|The two of clubs was a complete '''brick''' on the river}}
 
 ====Derived terms====
-{{rel-top3|terms derived from brick (noun)}}
-* {{l|en|brick in one's hat}}
-* {{l|en|brickie}}
-* {{l|en|bricklayer}}
-* {{l|en|brick red}}, {{l|en|brick-red}}
-* {{l|en|bricks and mortar}}
-* {{l|en|bricks and clicks}}
-* {{l|en|brick shithouse}}
-* {{l|en|brickwork}}
-{{rel-mid3}}
-* {{l|en|brickworks}}
-* {{l|en|drop a brick}}
-* {{l|en|hit the bricks}}
-* {{l|en|like a cat on a hot brick}}
-* {{l|en|like a ton of bricks}}
-* {{l|en|make bricks without straw}}
-* {{l|en|make bricks without straws}}
-{{rel-mid3}}
-* {{l|en|run into a brick wall}}
-* {{l|en|shit a brick}}
-* {{l|en|shit bricks}}
-* {{l|en|take to the bricks}}
-* {{l|en|talk to a brick wall}}
-* {{l|en|thick as a brick}}
-{{rel-bottom}}
+{{der4
+| {{l|en|all-brick}}
+| {{l|en|brickie}}
+| {{l|en|bricklayer}}
+| {{l|en|brick-red}}
+| {{l|en|brickwork}}
+| {{l|en|brickworks}}
+}}
+
+====Related terms====
+{{rel4
+| {{l|en|brick in one's hat}}
+| {{l|en|brick red}}
+| {{l|en|brick shithouse}}
+| {{l|en|bricks and clicks}}
+| {{l|en|bricks and mortar}}
+| {{l|en|drop a brick}}
+| {{l|en|hit the bricks}}
+| {{l|en|like a cat on a hot brick}}
+| {{l|en|like a ton of bricks}}
+| {{l|en|make bricks without straw}}
+| {{l|en|make bricks without straws}}
+| {{l|en|run into a brick wall}}
+| {{l|en|shit a brick}}
+| {{l|en|shit bricks}}
+| {{l|en|take to the bricks}}
+| {{l|en|talk to a brick wall}}
+| {{l|en|thick as a brick}}
+}}
 
 ====Translations====
 {{trans-top|hardened block used for building}}
