--- a/en/坸/坸.13051.wikitext
+++ b/en/坸/坸.13051.wikitext
@@ -9,19 +9,29 @@
 
 ====References====
 * {{Han ref|kx=0227.020|dkj=04997|dj=0462.180|hdz=10434.010|uh=5778|ud=22392}}
-* [http://yedict.com/htm/57/5778.htm yedict.com (叶典)]
 
 ----
 
-==Cantonese==
+==Chinese==
 
-===Hanzi===
-{{yue-hanzi|jyut=gau3|y=gau3}}
+===Etymology 1===
+{{zh-see|垢|v}}
 
-# {{defn|lang=yue|sort=土05}}
+===Etymology 2===
+{{zh-forms}}
 
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+====Pronunciation====
+{{zh-pron
+|cat=
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+=====Compounds=====
+{{zh-der|埯魅坸仔}}
 
 ----
 
@@ -31,15 +41,6 @@
 {{ko-hanja|hangeul=구|rv=gu|mr=ku}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[gòu]] ([[gou4]]), [[bō]] ([[bo1]])|wg=kou<sup>4</sup>, po<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 [[fr:坸]]
 [[ko:坸]]
