--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -69,7 +69,15 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * {{sense|to be poor at}} to [[rock]], to [[rule]]
 
 ====Derived terms====
-{{der4|title=Terms derived from ''suck'' (verb)|[[insuck]]|[[suckable]]|[[sucker]]|[[suckle]]|[[sucky]]|[[sucky-sucky]]}}
+{{der4|title=Terms derived from ''suck'' (verb)
+|[[insuck]]
+|[[suckable]]
+|[[sucker]]
+|[[suckle]]
+|[[suck the air out of]]
+|[[sucky]]
+|[[sucky-sucky]]
+}}
 
 ====Related terms====
 {{rel4|title=Terms related to ''suck'' (verb)|[[suck a big one]]|[[suck a lemon]]|[[suck arse]]|[[suck ass]]|[[suck balls]]|[[suck cock]]|[[suck donkey balls]]|[[suck donkey cock]]|[[suck donkey dick]]|[[suck face]]|[[suck hind tit]]|[[suck into]]|[[suck it]]|[[suck it up]]|[[suck lemons]]|[[suck my balls]]|[[suck off]]|[[suck on that]]|[[suck out]]|[[suck rocks]]|[[suck tits]]|[[suck up]]|[[teach grandmother to suck eggs]]}}
