--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -25,6 +25,7 @@ From {{etyl|la|en}} {{m|la|i.e.}}, an abbreviation of {{m|la|id est||it is}}.
 ====Translations====
 {{trans-top|that is}}
 * Afrikaans: {{t|af|d.w.s.}}
+* Arabic: {{t+|ar|أَيْ}}, {{t|ar|يَعْنِي}}
 * Armenian: {{t+|hy|այսինքն}}
 * Bashkir: {{t|ba|йәғни|sc=Cyrl}}
 * Bulgarian: {{t|bg|т.е.|sc=Cyrl}}
