--- a/en/慇/慇.15706.wikitext
+++ b/en/慇/慇.15706.wikitext
@@ -13,27 +13,12 @@
 ----
 
 ==Chinese==
-{{zh-forms|s=殷}}
 
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation===
-{{zh-pron
-|m=yīn
-|c=jan1
-|mc=y
-|oc=y
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|zh}}
-
-====Compounds====
-{{zh-der|慇懃|慇慇懃懃|慇慇}}
+===Etymology===
+{{zh-see|殷|v|hospitality}}
 
 ----
 
