--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{Han etyl}}
-{{Han compound|日|一|勿|t1=sun|ls=ic}} The rays of the sun.
+{{Han compound|日|示|彡|t1=sun|ls=ic}} The rays of the sun.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60227|canj=AMSH|ids=⿱旦勿}}
