--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -400,7 +400,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 ## To [[ignore]] as a social [[snub]].
 ##: {{ux|en|After the incident at the dinner party, people started to '''cut''' him on the street.}}
 # {{lb|en|intransitive|cinema|audio|usually as imperative}} To [[cease]] [[record]]ing activities.
-#: {{ux|en|After the actors read their lines, the director yelled "'''Cut'''!"}}
+#: {{ux|en|After the actors read their lines, the director yelled, "'''Cut'''!"}}
 # {{lb|en|transitive|computing}} To [[remove]] and place in [[memory]] for later use.
 #: {{ux|en|Select the text, '''cut''' it, and then paste it in the other application.}}
 # {{lb|en|intransitive}} To [[enter]] a [[queue]] in the wrong place.
