/* Derived terms */ <cost#42084284>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -34,7 +34,7 @@ From {{etyl|enm|en}} {{m|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to co
 |[[cost avoidance]]
 |[[cost-benefit]]
 |[[cost benefit analysis]]
-|[[cost center]]
+|[[cost center]], [[cost centre]]
 |[[cost containment]]
 |[[cost control]]
 |[[cost cutting]]
