/* Etymology 1 */ Norwegian cognate <plum#42092365>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -11,7 +11,7 @@
 [[Category:English 1-syllable words]]
 
 ===Etymology 1===
-From {{etyl|ang|en}} {{m|ang|plūme}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prūmǭ}}. Cognate with German {{m|de|Pflaume}}, Dutch {{m|nl|pruim}}. Compare {{m|en|prune}}
+From {{etyl|ang|en}} {{m|ang|plūme}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prūmǭ}}. Cognate with German {{m|de|Pflaume}}, Dutch {{m|nl|pruim}}, {{cog|no|plomme}}. Compare {{m|en|prune}}
 
 ====Noun====
 [[Image:Plum on tree.jpg|thumb|A plum growing on a plum tree.]]
