--- a/en/愣/愣.15670.wikitext
+++ b/en/愣/愣.15670.wikitext
@@ -16,7 +16,8 @@
 {{zh-pron
 |m=lèng
 |c=ling6,ling4
-|mn=qz,xm,zz:lēng
+|mn=qz,xm,zz:lēng/tw:gāng
+|mn_note=gāng - 卬 is used in the Mainland
 |ma=y
 |cat=
 }}
