--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -422,8 +422,9 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 #: {{ux|en|If you '''cut''' then I'll deal.}}
 # {{lb|en|transitive|slang}} To [[write]].
 #: {{ux|en|'''cut''' orders;&emsp; '''cut''' a check}}
-# {{lb|en|transitive|slang}} To [[dilute]] a liquid, usually [[alcohol]].
+# {{lb|en|transitive|slang}} To [[dilute]] or [[adulter]] a recreational drug.
 #: {{ux|en|The bartender '''cuts''' his beer to save money and now it's all watery.}}
+#: {{ux|en|Drug dealers sometimes '''cut''' cocaine with lidocaine.}}
 # {{lb|en|transitive}} To exhibit (a quality). <!--needs improving: you don't cut a quality, but a figure-->
 #* {{quote-journal|date=January 25, 2011|author=Paul Fletcher|work=BBC
 |title=[http://news.bbc.co.uk/sport2/hi/football/league_cup/9371217.stm Arsenal 3-0 Ipswich (agg. 3-1)]
