--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -288,6 +288,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Danish: {{t|da|næseben|n}}
 * Faroese: {{t|fo|nasabein|n}}
 * Finnish: {{t|fi|nenän selkä}}
+* Georgian: {{t|ka|ძგიდე}}, {{t|ka|კეხი}}
 * German: {{t|de|Nasenrücken|m}}
 * Greek: {{t+|el|ράχη|f}}, {{t+|el|άκανθα|f}}
 * Hungarian: {{t+|hu|orrnyereg}}
