t+ka:[[ჯორი]] t-balance ([[WT:EDIT|Assisted]]) <bridge#42125743>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -391,6 +391,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Esperanto: {{t|eo|ponto}}
 * Finnish: {{t+|fi|talla}}
 * French: {{t+|fr|chevalet|m}}
+* Georgian: {{t|ka|ჯორი}}
 {{trans-mid}}
 * German: {{t+|de|Steg|m}}
 * Greek: {{t+|el|καβαλάρης|m}}
