--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -485,6 +485,7 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 * Faroese: {{t|fo|bridge|n}}
 * Finnish: {{t+|fi|bridge}}
 * French: {{t+|fr|bridge|m}}
+* Georgian: {{t|ka|ბრიჯი}}
 * German: {{t+|de|Bridge|n}}
 * Hungarian: {{t+|hu|bridzs}}
 * Icelandic: {{t|is|bridds|n}}
