/* Usage notes */ <come#42126760>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -404,7 +404,7 @@ The meaning of ''semen or female ejaculatory discharge'' is considered rude slan
 #*: '''Come''' the final whistle, Mikel Arteta lay flabbergasted on the turf.
 
 =====Usage notes=====
-* ''[[came#Preposition|Came]]'' is often used when both the indicated event, period or change in state occurred in the past.
+* {{m|en|came#Preposition|Came}} is often used when both the indicated event, period or change in state occurred in the past.
 
 ====Interjection====
 {{en-interj}}
