--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -53,8 +53,8 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Irish: {{t|ga|m.sh.}}
 * Italian: {{qualifier|[[ad esempio]]}} {{t|it|ad es.}}
 * Japanese: {{t+|ja|例えば|tr=tatoeba|sc=Jpan}}
-{{trans-mid}}
 * Korean: {{t|ko|예를 들면|sc=Kore}}
+{{trans-mid}}
 * Latin: {{t+|la|e. g.}}, {{t+|la|ex. gr.}} ''(exempli gratia)''; {{t+|la|e. c.}} ''(exempli causa)''
 * Latvian: {{qualifier|[[piemēram]]}} {{t|lv|piem.}}
 * Lithuanian: {{qualifier|[[pavyzdžiui]]}} {{t|lt|pvz.}}
@@ -73,6 +73,8 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 *: Roman: {{t|sh|npr.}} {{qualifier|[[na]] [[primer]]}}
 * Slovak: {{qualifier|[[napríklad]]}} {{t+|sk|napr.}}
 * Slovene: {{qualifier|[[na]] [[primer]]}} {{t|sl|npr.}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|na pś.}} {{qualifier|[[na pśikład]]}}
 * Spanish: {{t|es|p. ej.}}
 * Swedish: {{t+|sv|t.ex.}}, {{t+|sv|t ex}}, {{t|sv|tex.}} {{t|sv|t. ex.}} {{qualifier|{{t+|sv|till exempel}}}}, {{t+|sv|exempelvis}}
 * Tagalog: {{t+|tl|halimbawa}}
