--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -50,7 +50,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Hebrew: {{t|he|לדוגמה|tr=l'dugmá}}, {{t|he|למשל|tr=l'mashál}}
 * Hungarian: {{qualifier|[[például]]}} {{t|hu|[[pl.]]}}
 * Icelandic: {{t+|is|t.d.}} {{qualifier|{{t+|is|til dæmis}}}}
-* Irish: {{t|ga|m.sh.}}
+* Irish: {{t|ga|m.sh.}} {{q|{{t|ga|mar shampla}}}}
 * Italian: {{qualifier|[[ad esempio]]}} {{t|it|ad es.}}
 * Japanese: {{t+|ja|例えば|tr=tatoeba|sc=Jpan}}
 * Korean: {{t|ko|예를 들면|sc=Kore}}
@@ -74,14 +74,14 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 * Slovak: {{qualifier|[[napríklad]]}} {{t+|sk|napr.}}
 * Slovene: {{qualifier|[[na]] [[primer]]}} {{t|sl|npr.}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|na pś.}} {{qualifier|[[na pśikład]]}}
+*: Lower Sorbian: {{t|dsb|na pś.}} {{qualifier|{{t|dsb|na pśikład}}}}
 * Spanish: {{t|es|p. ej.}}
 * Swedish: {{t+|sv|t.ex.}}, {{t+|sv|t ex}}, {{t|sv|tex.}} {{t|sv|t. ex.}} {{qualifier|{{t+|sv|till exempel}}}}, {{t+|sv|exempelvis}}
 * Tagalog: {{t+|tl|halimbawa}}
 * Turkish: {{t+|tr|örneğin}}, {{t+|tr|mesela}}, {{t|tr|örn.}}
 * Ukrainian: {{t|uk|наприклад|tr=napryklad}}
 * Vietnamese: {{qualifier|[[ví dụ]]}} {{t|vi|vd.}}
-* Welsh: {{t|cy|e.e.}}
+* Welsh: {{t|cy|e.e.}} {{q|{{t|cy|er enghraifft}}}}
 {{trans-bottom}}
 
 ====References====
