--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -144,6 +144,10 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Swedish: {{t+|sv|resurs|c}}
 {{trans-bottom}}
 
+{{trans-top|a substance with constant characteristics}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{trans-top|drugs}}
 * Chinese:
 *: Mandarin: {{t+|cmn|毒品|sc=Hani}}
