--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -144,7 +144,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Swedish: {{t+|sv|resurs|c}}
 {{trans-bottom}}
 
-{{trans-top|a substance with constant characteristics}}
+{{trans-top|a form of matter with constant chemical composition and characteristic properties}}
 {{trans-mid}}
 {{trans-bottom}}
 
