t+mi:[[pūmatū]] ([[WT:EDIT|Assisted]]) <substance#42178510>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -146,6 +146,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 
 {{trans-top|a form of matter with constant chemical composition and characteristic properties}}
 {{trans-mid}}
+* Maori: {{t|mi|pūmatū }}
 {{trans-bottom}}
 
 {{trans-top|drugs}}
