--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -106,9 +106,9 @@
 *: Sorani: {{t|ku|دەولەتێن یەکبوویییێن ئەمەریکایێ|tr=Dewletên Yekbûyîyên Emerîkayê|sc=ku-Arab}}, {{t|ckb|وڵاتە یەکگرتووەکانی ئەمەریکا|tr=Wiłâta Yekgirtûakâni Amerikâ|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|Америка Кошмо Штаттары|sc=Cyrl}}
 * Lakota: {{t|lkt|Mílahaŋska Tȟamákȟočhe}}
-{{trans-mid}}
 * Lao: {{t|lo|ສະຫະລັດອະເມລິກາ|sc=Laoo}}, {{t|lo|ອະເມລິກາ|sc=Laoo}}, {{t|lo|ອາເມລິກາ|sc=Laoo}}
 * Latgalian: {{t|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{t|ltg|ASV}}
+{{trans-mid}}
 * Latin: {{t|la|Civitates Foederatae Americae}}, {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}
 * Latvian: {{t|lv|Amerikas Savienotās Valstis}}, {{t|lv|ASV}}
 * Laz: {{t-needed|lzz}}
@@ -188,6 +188,7 @@
 * West Frisian: {{t+|fy|Feriene Steaten fan Amearika}}
 * Yakut: {{t|sah|Америка Холбоһуктаах Штаттара|sc=Cyrl}}
 * Yiddish: {{t|yi|פֿאַראייניקטע שטאַטן|p}}, {{t|yi|פֿאַראייניקטע שטאַטן פֿון אַמעריקע|p|sc=Hebr}}
+* Zhuang: {{t|za|Meijgoz}}
 {{trans-bottom}}
 
 ====Derived terms====
