t+za:[[Yinghgoz]] t-balance ([[WT:EDIT|Assisted]]) <United Kingdom#42184138>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -73,8 +73,8 @@
 * Korean: {{t+|ko|영국}} ({{t+|ko|英國|sc=Kore}}), {{t|ko|그레이트브리튼 북아일랜드 연합 왕국}} {{t|ko|연합 왕국}}
 * Kurdish: {{t|ku|Keyaniya Yekbûyî|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|Бириккен Падышалык}}
-{{trans-mid}}
 * Lao: {{t+|lo|ສະຫະລາຊະອານາຈັກ}}
+{{trans-mid}}
 * Latin: {{t|la|Britanniarum Regnum|n}}, {{t|la|Rēgnum Ūnītum|n}}
 * Latvian: {{t|lv|Apvienotā Karaliste|f}}, {{t|lv|Lielbritānijas un Ziemeļīrijas Apvienotā Karaliste|f}}
 * Lithuanian: {{t+|lt|Jungtinė Karalystė}}
@@ -133,6 +133,7 @@
 * Welsh: {{t|cy|Teyrnas Unigol|f|alt=Y Deyrnas Unigol}}
 * West Frisian: {{t|fy|Feriene Keninkryk}}
 * Yiddish: {{t|yi|פֿאַראייניקט קיניגרײַך|n}}
+* Zhuang: {{t|za|Yinghgoz}}
 {{trans-bottom}}
 
 ===See also===
