--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -88,9 +88,9 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * Korean: {{t+|ko|코트}}, {{t+|ko|외투}}
 * Kyrgyz: {{t|ky|пальто}}
 * Latgalian: {{t|ltg|svuorks}}, {{t|ltg|kuļuks}}, {{t|ltg|biņdzjuks}}, {{t|ltg|sveita}}
-{{trans-mid}}
 * Latin: {{t|la|pallium|n}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
+{{trans-mid}}
 * Lithuanian: {{t|lt|paltas|m}}
 * Luhya: {{t|luy|kumuchosi}}
 * Macedonian: {{t|mk|капут|m|sc=Cyrl}}
@@ -124,6 +124,7 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * Vietnamese: {{t|vi|áo bành tô}}
 * Volapük: {{t-needed|vo}}
 * Welsh: {{t|cy|côt|f}}
+* Winnebago: {{t|win|woonąžįxete}}
 {{trans-bottom}}
 
 {{trans-top|covering of material, such as paint}}
