--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -101,7 +101,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 {{trans-mid}}
 * Kyrgyz: {{t|ky|Жаңы Зеландия|sc=Cyrl}}
 * Lao: {{t|lo|ນູແວນ​ເຊລັງ|sc=Laoo}}
-* Latin: {{t|la|Nova Zelandia|f}}
+* Latin: {{t|la|Nova Seelandia|f}}, {{t|la|Nova Zelandia|f}}
 * Latvian: {{t|lv|Jaunzēlande|f}}
 * Lithuanian: {{t+|lt|Naujoji Zelandija|f}}
 * Luhya: {{t|luy|Niuziland}}
