t+frr:[[bööder]] ([[WT:EDIT|Assisted]]) <butter#42205020>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -288,6 +288,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Navajo: {{t|nv|mandagíiya}}
 * Nepali: {{t|ne|नौनी}}, {{t|ne|मक्खन}}
 * Norman: {{t|nrf|beurre|m}} {{qualifier|Jersey}}, {{t|nrf|burre|m}} {{qualifier|Guernsey}}, {{t|nrf|buure|m}} {{qualifier|continental Norman}}, {{t|nrf|bür|m}} {{qualifier|Sark}}
+* North Frisian: {{t|frr|bööder}}
 * Norwegian:
 *: Bokmål: {{t+|nb|smør|n}}
 *: Nynorsk: {{t|nn|smør|n}}
