New def <cut#42214200>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -131,6 +131,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 # {{lb|en|cricket}} A [[batsman]]'s shot played with a [[swing]]ing motion of the bat, to hit the ball [[backward]] of [[point]].
 # {{lb|en|cricket}} [[sideways|Sideways]] [[movement]] of the ball through the [[air]] caused by a [[fast bowler]] [[impart]]ing [[spin]] to the ball.
 # {{lb|en|sports}} In [[lawn tennis]], etc., a slanting stroke causing the ball to spin and bound irregularly; also, the spin thus given to the ball.
+# {{lb|en|golf}} In a strokeplay competition, the early elimination of those players who have not then attained a preannounced score, so that the rest of the competition is less pressed for time and more entertaining for spectators.
 # The act or right of dividing a deck of playing cards.
 #: ''The player next to the dealer makes a '''cut''' by placing the bottom half on top.''
 # The manner or style a garment etc. is fashioned in.
