--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -24,7 +24,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 
 # {{lb|en|uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
 # {{lb|en|countable|obsolete|chemistry}} Any specific [[soft]] [[substance]].
-#: '''''butter''' of antimony''
+#: '''''butter''' of antimony; '''butter''' of arsenic''
 # {{lb|en|uncountable}} Any of various foodstuffs made from other foods or oils, similar in consistency to, eaten like or intended as a substitute for butter (''preceded by the name of the food used to make it'').
 #: ''peanut '''butter'''''
 
