Undo revision 42228252 by [[Special:Contributions/98.118.0.79|98.118.0.79]] ([[User talk:98.118.0.79|talk]]) <icon#42228259>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -1,5 +1,4 @@
-#REDIRECT [[iCon]]
-
+{{also|iĉon}}
 ==English==
 {{wikipedia}}
 
@@ -7,7 +6,7 @@
 * {{l|en|eikon}}, {{l|en|ikon}} {{qualifier|only in sense of religious image|lang=en}}
 
 ===Etymology===
-From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||likeness, image, portrait}}. Eastern Orthodox Church sense is attested from 1833. Computing sense first recorded around 1982.
+From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||likeness, image, portrait}}. Eastern Orthodox Church sense is attested from 1833. Computing sense first recorded in 1982.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈaɪ.kən/|lang=en}}
