--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -220,7 +220,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Urdu: {{t|ur|معدہ|f|tr=ma'da}}
 * Uyghur: {{t+|ug|ئاشقازان}}
 * Uzbek: {{t+|uz|qorin}}
-* Venetian: {{t|vec|stómego|m}}
+* Venetian: {{t|vec|stòmego|m}}
 * Vietnamese: {{t+|vi|dạ dày}}
 * Vilamovian: {{t|wym|maoga}}
 * Volapük: {{t+|vo|stomäg}}
