--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -30,10 +30,13 @@
 ====Definitions====
 {{zh-hanzi}}
 
-# [[evil]], [[wicked]], [[mean]], [[bad]], [[foul]]
+# [[evil]]; [[wicked]]; [[mean]]; [[bad]]; [[foul]]
 #: {{zh-ant|善}}
 #: {{zh-x|惡{è}毒|malicious}}
-#: {{zh-x|他 經常 做惡{è}，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
+#* {{zh-x|他 經常 做惡{è}，這 回 終於 犯事 了。|He often does '''bad things''' and has finally been caught.}}
+
+====Compounds====
+{{zh-der|惡心|惡霸|惡報|惡變|惡病質|惡臭|惡道|惡德|惡鬥|惡毒|惡感|惡狗|惡貫滿盈|惡鬼|惡棍|惡果|惡耗|惡狠狠|惡化|惡疾|惡蹟|惡口|惡辣|惡浪|惡劣|惡露:[[lochia]]|惡罵|惡夢|惡名|惡魔|惡唸|惡癖|惡氣|惡趣|惡人|惡煞|惡少|惡聲|惡聲惡氣|惡水|惡俗|惡徒|惡習|惡相|惡行|惡性|惡性循環|惡性腫瘤|惡兇兇|惡言|惡言惡語|惡意|惡因|惡語|惡語中傷|惡運|惡戰|惡仗|惡濁|惡阻|惡作劇|千刁萬惡|勸善戒惡|惡叉白賴|元惡大憝|作惡|惡衣蔬食|十惡|惡瘡|做好做惡|惡障|惡稔貫盈|乞留惡濫|剗惡除奸|惡勢力|惡識|嫉惡若仇|五濁惡世|助惡|惡詫|惡漢|惡黨|惡食|惡風|惡限|惡運當頭|惡逆|惡躁|惡訊|惡言潑語|惡補|惡衣糲食|惡緣惡業|惡稔罪盈|惡稔禍盈|惡眉惡眼|惡發|惡犬|惡法|惡歲|惡模惡樣|惡有惡報|惡曜|惡支殺|惡憐|惡性貧血|惡性競爭|惡性倒閉|惡客|惡子|惡婦|惡哏哏|惡名昭彰|惡兆|惡例|嚴惡|怒惡|惡惡實實|凶神惡煞|性惡說|怙惡不悛|忒惡|惡孽|剪惡除奸|惡衣菲食|惡月|勸善懲惡|十惡不赦|凶惡|差惡|大惡|惡地|惡衣惡食|惡言詈辭|惡寒|不惡而嚴|嫉惡如仇|嫉惡好善|不念舊惡|姑惡|好善嫉惡|中惡|惡積禍盈|彰善癉惡|元惡|同惡相求|同惡相助|惡業|同惡相濟|惡賴|嫉惡|作惡多端|同惡相救|勸善黜惡|元惡大奸|惡貫禍盈|刁惡|怙惡不改|三惡道|懲惡勸善|播惡遺臭|扶善懲惡|掩惡溢美|改惡向善|欺善怕惡|掩惡揚善|萬惡|止惡揚善|窮山惡水|狠惡|窮凶惡極|積惡餘殃|積惡|懲惡獎善|掩罪藏惡|禍稔惡盈|濟惡|是非善惡|癉惡彰善|無惡不作|疾惡若仇|疾惡如仇|疾惡好善|疾惡|禍盈惡稔|改惡從善|懷惡不悛|獰惡|犯惡|為惡不悛|抑惡揚善|改惡行善|溢惡|禍因惡積|窮凶極惡|旌善懲惡|醜惡|貧嘴惡舌|粗惡|自食惡果|罪惡貫盈|美惡|腐惡|辟惡除患|首惡|面惡心善|鬼怕惡人|罪惡感|隱惡揚善|罪惡如山|褒善貶惡|險惡|罪惡昭著|罪惡|罪惡深重|遠惡|賞善罰惡|邪惡|醜類惡物|釁惡|風塵惡俗|逢君之惡|辟惡|罪惡滔天|陰惡|除惡扶善|除惡務盡|除惡務本|討惡剪暴|長惡不悛|長君之惡|罪大惡極|菲衣惡食|遏惡揚善|薄惡|面善心惡|賣惡|諱惡不悛|褒賢遏惡|粗衣惡食|苦思惡想|舊惡}}
 
 ===Pronunciation 2===
 {{zh-pron
@@ -55,6 +58,9 @@
 # to [[hate]]; to [[loathe]]
 #: {{zh-x|厭惡|to loathe}}
 
+====Compounds====
+{{zh-der|fold=1|惡濕居下|交惡|善善惡惡|愛遠惡近|好善惡惡|惡醉強酒|惡紫奪朱|惡直醜正|惡惡從短|惡惡|厭惡|好生惡殺|惡嫌|嫌好道惡|好諛惡直|好惡|可惡|好逸惡勞|痛惡|憎惡|深惡痛嫉|深惡痛絕|畏影惡跡|戀生惡死|欣生惡死|羞惡|貪生惡死}}
+
 ===Pronunciation 3===
 {{zh-pron
 |m=wū
@@ -70,8 +76,8 @@
 
 # {{n-g|Interjection used to express surprise}}: [[oh]]; [[ah]]
 
-===Compounds===
-{{zh-der|惡心|惡霸|惡報|惡變|惡病質|惡臭|惡道|惡德|惡鬥|惡毒|惡感|惡狗|惡貫滿盈|惡鬼|惡棍|惡果|惡耗|惡狠狠|惡化|惡疾|惡蹟|惡口|惡辣|惡浪|惡劣|惡露:[[lochia]]|惡罵|惡夢|惡名|惡魔|惡唸|惡癖|惡氣|惡趣|惡人|惡煞|惡少|惡聲|惡聲惡氣|惡水|惡俗|惡徒|惡習|惡相|惡行|惡性|惡性循環|惡性腫瘤|惡兇兇|惡言|惡言惡語|惡意|惡因|惡語|惡語中傷|惡運|惡戰|惡仗|惡濁|惡阻|惡作劇|可惡|三惡道|不念舊惡|不惡而嚴|中惡|乞留惡濫|五濁惡世|交惡|作惡|作惡多端|做好做惡|元惡|元惡大奸|元惡大憝|凶惡|凶神惡煞|刁惡|剗惡除奸|剪惡除奸|助惡|勸善懲惡|勸善戒惡|勸善黜惡|十惡|十惡不赦|千刁萬惡|厭惡|同惡相助|同惡相救|同惡相求|同惡相濟|善善惡惡|喑惡叱吒|嚴惡|大惡|好善嫉惡|好善惡惡|好惡|好生惡殺|好諛惡直|好逸惡勞|姑惡|嫉惡|嫉惡好善|嫉惡如仇|嫉惡若仇|嫌好道惡|嫌惡|差惡|彰善癉惡|忒惡|怒惡|怙惡不悛|怙惡不改|性惡說|惡例|惡兆|惡勢力|惡叉白賴|惡名昭彰|惡哏哏|惡地|惡婦|惡嫌|惡子|惡孽|惡客|惡寒|惡性倒閉|惡性競爭|惡性貧血|惡惡|惡惡實實|惡惡從短|惡憐|惡支殺|惡曜|惡月|惡有|惡有惡報|惡業|惡模惡樣|惡歲|惡法|惡漢|惡濕居下|惡犬|惡瘡|惡發|惡直醜正|惡眉惡眼|惡稔禍盈|惡稔罪盈|惡稔貫盈|惡積禍盈|惡紫奪朱|惡緣惡業|惡衣惡食|惡衣糲食|惡衣菲食|惡衣蔬食|惡補|惡言潑語|惡言詈辭|惡訊|惡詫|惡識|惡貫禍盈|惡賴|惡躁|惡逆|惡運當頭|惡醉強酒|惡限|惡障|惡風|惡食|惡黨|愛遠惡近|憎惡|懲惡勸善|懲惡獎善|懷惡不悛|戀生惡死|打惡心|扶善懲惡|抑惡揚善|掩惡揚善|掩惡溢美|掩罪藏惡|播惡遺臭|改惡向善|改惡從善|改惡行善|旌善懲惡|日趨惡劣|是非善惡|欣生惡死|欺善怕惡|止惡揚善|深惡痛嫉|深惡痛絕|溢惡|濟惡|為惡不悛|無惡不作|犯惡|狠惡|獰惡|畏影惡跡|疾惡|疾惡好善|疾惡如仇|疾惡若仇|痛惡|癉惡彰善|禍因惡積|禍盈惡稔|禍稔惡盈|萬惡|稔惡不悛|積惡|積惡餘殃|窮凶惡極|窮凶極惡|窮山惡水|粗惡|粗衣惡食|罪大惡極|罪惡|罪惡如山|罪惡感|罪惡昭著|罪惡深重|罪惡滔天|罪惡貫盈|美惡|羞惡|腐惡|自食惡果|舊惡|苦思惡想|菲衣惡食|薄惡|褒善貶惡|褒賢遏惡|討惡剪暴|諱惡不悛|貧嘴惡舌|貪生惡死|賞善罰惡|賣惡|辟惡|辟惡除患|逢君之惡|遏惡揚善|遠惡|邪惡|酒惡|醜惡|醜類惡物|釁惡|長君之惡|長惡不悛|除惡務本|除惡務盡|除惡扶善|陰惡|險惡|隱惡揚善|面善心惡|面惡心善|風塵惡俗|首惡|鬼怕惡人|惡雞婆}}
+====Compounds====
+{{zh-der|fold=1|喑惡叱吒|惡有}}
 
 ----
 
