--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -5,10 +5,6 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=47120|canj=GPIM,GPMM|ids=⿰土匀}}
 
-# [[equal]], [[even]], [[fair]]
-# [[all]], [[also]]
-# [[key]], [[pitch]] (in Chinese music)
-
 ====References====
 * {{Han ref|kx=0224.310|dkj=04916|dj=0459.200|hdz=10425.060|uh=5747|ud=22343|bh=A7A1|bd=42913}}
 
@@ -30,13 +26,17 @@
 |w=
 |mc=y
 |oc=y
-|cat=
+|cat=a,adv,n
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# [[equal]], [[even]], [[fair]]
+# [[all]], [[also]]
+# [[key]], [[pitch]] (in Chinese music)
+
+{{zh-cat|Intermediate}}
 
 ----
 
@@ -99,7 +99,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=균|rv=gyun|mr=kyun}}
+{{ko-hanja|hangeul=균}}
 
 # {{defn|lang=ko|sort=土04}}
 
