t+vi:[[mạn trái]] t+vi:[[trái]] t-balance t+vi:[[cửa tàu]] t+vi:[[cổng]] t+vi:[[chuyển]] t+vi:[[chuyển đổi]] t+vi:[[phiên bản chuyển đổi]] ([[WT:EDIT|Assisted]]) <port#42258626>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -163,8 +163,8 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * Georgian: {{t|ka|მარცხენა ქიმი|sc=Geor}}, {{t|ka|მარცხენა ბორტი|sc=Geor}}
 * German: {{t+|de|Backbord|n}}
 * Icelandic: {{t+|is|bakborði|m}}
-* Irish: {{t|ga|clébhord|m}}
 {{trans-mid}}
+* Irish: {{t|ga|clébhord|m}}
 * Italian: {{t+|it|babordo|m}}
 * Japanese: {{t|ja|左舷|tr=さげん, sagen}}
 * Norman: {{t|nrf|babord|m}}
@@ -176,6 +176,7 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * Scottish Gaelic: {{t|gd|bòrd-cùlaibh|m}}
 * Spanish: {{t+|es|babor|m}}
 * Swedish: {{t+|sv|babord|n}}
+* Vietnamese: {{t|vi|mạn trái}}
 * Welsh: {{t|cy|larbwrd|m}}
 {{trans-bottom}}
 
@@ -203,12 +204,13 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * Finnish: {{t+|fi|paapuuri|alt=paapuurin}}
 * French: du [[bâbord]]
 * Greek: {{t+|el|αριστερό|n}}
-{{trans-mid}}
 * Italian: {{t+|it|babordo|m}}
+{{trans-mid}}
 * Polish: {{t|pl|lewoburtowy}}
 * Spanish: {{t|es|a babor|m|f}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t+|sv|babord}}, {{t+|sv|babord}}-
+* Vietnamese: {{t+|vi|trái}}
 {{trans-bottom}}
 
 ====Verb====
@@ -259,6 +261,7 @@ Inherited from the {{inh|en|ang|port}}, from the {{der|en|la|porta||passage, gat
 * Russian: {{t+|ru|порт|m}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t+|sv|port|c}}
+* Vietnamese: {{t|vi|cửa tàu}}
 {{trans-bottom}}
 
 {{trans-top|computing: logical or physical construct into and from which data are transferred}}
@@ -289,6 +292,7 @@ Inherited from the {{inh|en|ang|port}}, from the {{der|en|la|porta||passage, gat
 * Swedish: {{t+|sv|port|c}}
 * Turkish: {{t+|tr|port}}
 * Ukrainian: {{t|uk|порт|m|sc=Cyrl}}
+* Vietnamese: {{t+|vi|cổng}}
 {{trans-bottom}}
 
 ===Etymology 3===
@@ -317,11 +321,12 @@ From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portare||carry}
 * Finnish: {{t+|fi|siirtää}}
 * French: {{t+|fr|porter}}
 * Norwegian: {{t+|no|porte}}
-{{trans-mid}}
 * Polish: {{t+|pl|konwertować|impf}}
+{{trans-mid}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t|sv|portera}}, {{t+|sv|porta}}
 * Turkish: {{t+|tr|liman}}
+* Vietnamese: {{t+|vi|chuyển}}, {{t|vi|chuyển đổi}}
 {{trans-bottom}}
 
 ====Noun====
@@ -348,6 +353,7 @@ From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portare||carry}
 {{trans-mid}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t|sv|portering|c}}, {{t|sv|portning|c}}
+* Vietnamese: {{t|vi|phiên bản chuyển đổi}}
 {{trans-bottom}}
 
 ===Etymology 4===
