t+es:[[portar]] t+es:[[versión portada]] t-balance ([[WT:EDIT|Assisted]]) <port#42258650>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -323,6 +323,7 @@ From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portare||carry}
 * Norwegian: {{t+|no|porte}}
 * Polish: {{t+|pl|konwertować|impf}}
 {{trans-mid}}
+* Spanish: {{t+|es|portar}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t|sv|portera}}, {{t+|sv|porta}}
 * Turkish: {{t+|tr|liman}}
@@ -350,6 +351,7 @@ From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portare||carry}
 {{trans-top|computing: program adapted to work on a different platform; act of adapting}}
 * Finnish: {{t+|fi|sovitus}}, {{t+|fi|sovittaminen}}, [[porttaaminen]] {{qualifier|informal}}, [[porttaus]] {{qualifier|informal}}
 * Norwegian: {{t|no|porting|m}}
+* Spanish: {{t|es|versión portada}}
 {{trans-mid}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t|sv|portering|c}}, {{t|sv|portning|c}}
