--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -126,7 +126,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Uzbek: {{qualifier|tortoise or turtle}} {{t+|uz|toshbaqa}}
 * Vietnamese: {{qualifier|tortoise or turtle}} {{t+|vi|rùa}}
 * Volapük: {{t|vo|tortug}}
-* Welsh: {{t|cy|crwban|m}} {{qualifier|tortoise or turtle}}
+* Welsh: {{qualifier|tortoise or turtle}} {{t|cy|crwban|m}}
 * West Coast Bajau: {{t|bdr|kekuro}}
 * West Frisian: {{t|fy|skyldpod}}
 * Yiddish: {{qualifier|tortoise or turtle}} {{t|yi|טשערעפּאַכע|f|tr=tsherepakhe|sc=Hebr}}
