--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -23,7 +23,7 @@
 {{Han compound|早|正|ls=ic}}, logic of compound unclear. It has been suggested that {{zh-l|*早}} looks like a spoon, so {{zh-l|*是}} may have been the original character for {{och-l|匙|spoon}}. As early as in late bronze inscriptions, {{zh-l|*早}} was replaced with {{zh-l|*日}} to give {{zh-l|*昰}}, which carried over to the small seal script, and ''{{w|Shuowen}}'' considers this a compound of {{zh-l|*日}} + {{zh-l|*正}} (i.e. “right” as the upright sun).
 
 ===Etymology===
-“This [an independent pronoun] > be right, correct, to be, so”. From {{inh|zh|sit-pro|*m-daj ~ *m-di||that; this}}. Cognate with {{cog|bo|དེ||that}}, {{cog|kac|dai}}, {{m|kac|ndai||this}}.
+“This [an independent pronoun] > be right, correct, to be, so”. From {{inh|zh|sit-pro|*m-daj ~ m-di||that; this}}. Cognate with {{cog|bo|དེ||that}}, {{cog|kac|dai}}, {{m|kac|ndai||this}}.
 
 Cognate with {{och-l|寔|this}}, {{och-l|實|this}} and {{och-l|諟|to examine, to consider}}.
 
