t+zdj:[[wana]] t-balance ([[WT:EDIT|Assisted]]) <fight#42269875>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -213,13 +213,14 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Irish: {{t|ga|troid}}
 * Italian: {{t+|it|combattere}}
 * Japanese: {{t|ja|対決|tr=[[たいけつする]], taiketsu-suru|sc=Jpan}}, {{t+|ja|戦う|sc=Jpan}}, {{t+|ja|闘う|tr=[[たたかう]], tatakau|sc=Jpan}}
-{{trans-mid}}
 * Khmer: {{t|km|ប្រយុទ្ឋ|tr=bprəyŭt|sc=Khmr}}
+{{trans-mid}}
 * Korean: {{t+|ko|싸우다|sc=Kore}}
 * Latin: {{t|la|combattuo}}
 * Latvian: {{t|lv|cīnīties}}
 * Lithuanian: {{t+|lt|kovoti}}, {{t|lt|kautis}}
 * Mongolian: {{t+|mn|тэмцэх|sc=Cyrl}}, {{t+|mn|байлдах|sc=Cyrl}}
+* Ngazidja Comorian: {{t|zdj|wana|alt=uwana na}}
 * Norwegian: {{t+|no|slåss}}
 * Occitan: {{t+|oc|batre}}
 * Old French: {{t|fro|batre}}, {{t|fro|cumbatre}}
