--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -35,6 +35,7 @@ In current form, calligraphical rendering of 臼.
 ----
 
 ==Japanese==
+{{ja-kanji forms|旧|舊}}
 
 ===Kanji===
 {{ja-kanji|grade=5|rs=日01|style=s|kyu=舊}}
