--- a/en/愈/愈.15644.wikitext
+++ b/en/愈/愈.15644.wikitext
@@ -3,7 +3,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=80332|canj=OMBP|ids=⿱俞心}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=80332|canj=OMBP|ids=⿱俞心(GHTV),⿱兪心(JK)}}
 
 # [[more and more]], [[even more]]
 
