--- a/en/愉/愉.15645.wikitext
+++ b/en/愉/愉.15645.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=98021|canj=POMN|ids=⿰忄俞(GHTK),⿰忄兪(K)}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=98021|canj=POMN|ids=⿰忄俞(GHTJ),⿰忄兪(K)}}
 
 ====References====
 * {{Han ref|kx=0394.040|dkj=10905|dj=0730.150|hdz=42330.010|uh=6109|ud=24841|bh=B472|bd=46194}}
