--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 [[File:Ez-map.png|thumb|Czech Republic]]
 ===Pronunciation===
-* {{a|UK|US}} {{IPA|/ˈtʃɛk ɹ‌ɪˈpʌblɪk/|lang=en}}
+* {{a|UK|US}} {{IPA|/ˈtʃɛk ɹɪˈpʌblɪk/|lang=en}}
 * {{audio|en-us-Czech Republic.ogg|Audio (US)|lang=en}}
 
 ===Proper noun===
