--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -96,7 +96,7 @@ In its general sense, ''come'' specifically marks motion {{l|en|towards}} the de
 
 When used with adverbs of location, ''come'' is usually paired with {{m|en|here}} or {{m|en|hither}}. In interrogatives, ''come'' usually indicates a question about source — "Where are you coming from?" — while ''go'' indicates a question about destination — "Where are you going?" or "Where are you going to?"
 
-A few old texts use {{m|en|comen}} as the past participle. Also, in some dialects, like rural Scots and rural Midlands dialects, the form {{m|en|comen}} is still occasionally in use, so phrases like the following can still be encountered there — ''Sa thoo bist comen heyr to nim min 'orse frae mee, then?'' {{IPAchar|[sä ðuː bɪst cʊmn̩ hiər tə nɪm miːn ɔːrs frə miː &#124; d̪ɛn]}} (so you have come here to steal my horse from me, then?).
+A few old texts use {{m|en|comen}} as the past participle. Also, in some dialects, like rural Scots and rural Midlands dialects, the form {{m|en|comen}} is still occasionally in use, so phrases like the following can still be encountered there — ''Sa thoo bist comen heyr to nim min 'orse frae mee, then?'' {{IPAchar|[sä ðuː bɪst cʊmn̩ hiər tə nɪm miːn ɔːrs frə miː | d̪ɛn]}} (so you have come here to steal my horse from me, then?).
 
 In antiquated texts, the verb {{m|en|be}} was sometimes used as the auxiliary instead of {{m|en|have}}, for example, ''Where is he that is born King of the Jews? for we have seen his star in the east, and '''are''' come to worship him.''
 
