--- a/en/易/易.16955.wikitext
+++ b/en/易/易.16955.wikitext
@@ -59,7 +59,10 @@ From {{inh|zh|sit-pro|*lwa(ː)y||easy}}. Cognate with {{cog|my|လွယ်||eas
 |h=pfs=yi
 |md=giê/ê
 |md_note=giê - vernacular; ê - literary
-|mn=ī
+|mn=xm,qz:kōe/ī
+|mn_note=Xiamen, Quanzhou: kōe - vernacular; ī - literary
+|mn-t=goi7/ghoi7/i6
+|mn-t_note=goi7/ghoi7 - vernacular; i6 - literary
 |w=3hhi
 |mc=1
 |oc=1,1
