Reverted edits by [[Special:Contributions/OctraBot|OctraBot]]. If you think this rollback is in error, please leave a message on my talk page. <libre#42311804>

--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{der|en}} and {{etyl|es|en|fr|libre||[[free]], having liberty, at liberty}}.
+From {{etyl|fr|en}} and {{etyl|es|en}} {{m|fr|libre||[[free]], having liberty, at liberty}}.
 
 ===Pronunciation===
 The pronunciation is near from French one.
@@ -31,7 +31,7 @@ The pronunciation is near from French one.
 ==Cebuano==
 
 ===Etymology===
-{{bor|ceb|es|libre}}, from {{der|ceb|la|līber}}, from {{der|ceb|itc-ola|loeber}}, from {{der|ceb|itc-pro|*louðeros}}, from {{etyl|ine-pro|ceb}} {{m|ine-pro||*h₁lewdʰ-er-os}}, from {{m|ine-pro|*h₁lewdʰ-||people}}.
+{{bor|ceb|es|libre}}, from {{etyl|la|ceb}} {{m|la|līber}}, from {{etyl|itc-ola|ceb}} {{m|itc-ola|loeber}}, from {{etyl|itc-pro|ceb}} {{m|itc-pro|*louðeros}}, from {{etyl|ine-pro|ceb}} {{m|ine-pro||*h₁lewdʰ-er-os}}, from {{m|ine-pro|*h₁lewdʰ-||people}}.
 
 ===Adjective===
 {{head|ceb|adjective}}
@@ -232,7 +232,7 @@ From {{inh|es|la|līber}}, from {{inh|es|itc-ola|loeber}}, from {{inh|es|itc-pro
 ==Tagalog==
 
 ===Etymology===
-{{der|tl|es|libre}}
+{{etyl|es|tl}} {{m|es|libre}}
 
 ===Pronunciation===
 * {{IPA|/ˈlibɾɛ/|lang=tl}}
