--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -31,7 +31,7 @@ The pronunciation is near from French one.
 ==Cebuano==
 
 ===Etymology===
-{{bor|ceb|es|libre}}, from {{der|ceb|la|līber}}, from {{der|ceb|itc-ola|loeber}}, from {{der|ceb|itc-pro|*louðeros}}, from {{etyl|ine-pro|ceb}} {{m|ine-pro|*h₁lewdʰ-er-os}}, from {{m|ine-pro|*h₁lewdʰ-||people}}.
+{{bor|ceb|es|libre}}, from {{der|ceb|la|līber}}, from {{der|ceb|itc-ola|loeber}}, from {{der|ceb|itc-pro|*louðeros}}, from {{der|ceb|ine-pro|*h₁lewdʰ-er-os}}, from {{m|ine-pro|*h₁lewdʰ-||people}}.
 
 ===Adjective===
 {{head|ceb|adjective}}
