--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -78,6 +78,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 | {{l|en|find another gear}}
 | {{l|en|find fault}}
 | {{l|en|find one's feet}}
+| {{l|en|find one's way}}
 | {{l|en|find out}}
 }}
 ''See also'' '''[[finding]]''' ''and'' '''[[found]]'''
