--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -591,7 +591,36 @@ From {{etyl|en|fr}} {{m|en|bridge}}.
 * {{l|it|bridgistico}}
 
 ----
+==Norwegian Bokmål==
+{{wikipedia|lang=no}}
 
+===Etymology===
+From {{der|nb|en|bridge}}
+
+===Noun===
+{{nb-noun-mu}}
+
+# {{l|en|bridge}} {{q|card game}} {{C|nb|Card games}}
+
+===References===
+* {{R:The Bokmål Dictionary}}
+
+----
+==Norwegian Nynorsk==
+{{wikipedia|lang=nn}}
+
+===Etymology===
+From {{der|nn|en|bridge}}
+
+===Noun===
+{{nn-noun-mu}}
+
+# {{l|en|bridge}} {{q|card game}} {{C|nn|Card games}}
+
+===References===
+* {{R:The Nynorsk Dictionary}}
+
+----
 ==Portuguese==
 
 ===Noun===
