--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -497,7 +497,7 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 {{trans-mid}}
 * Maori: {{t|mi|piriti}}
 * Norwegian: 
-*: Bokmål: {{t|nb|bridge|m}}
+*: Bokmål: {{t+|nb|bridge|m}}
 *: Nynorsk: {{t|nn|bridge|m}}
 * Polish: {{t+|pl|brydż|m}}
 * Portuguese: {{t+|pt|bridge|m}}
