--- a/en/傘/傘.11179.wikitext
+++ b/en/傘/傘.11179.wikitext
@@ -16,12 +16,13 @@
 ===Pronunciation===
 {{zh-pron
 |m=sǎn
+|ma=
 |c=saan3
 |h=pfs=sán
+|md=sāng
 |mn=sòaⁿ/sàn
 |mn_note=sòaⁿ - vernacular; sàn - literary
 |w=2se
-|ma=
 |mc=y
 |oc=y
 |cat=n,a
@@ -105,7 +106,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=[[산]]|mr=san}}
+{{ko-hanja|hangeul=산}}
 
 # {{defn|lang=ko|sort=人10}}
 
