--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -100,7 +100,8 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Maltese: {{t|mt|purtiera|f}}
 * Mongolian: {{t+|mn|хөшиг|sc=Cyrl}}
 * Norwegian:
-*: Bokmål: {{t+|no|gardin|m|f}}
+*: Bokmål: {{t+|nb|gardin|m|f|n}}
+*: Nynorsk: {{t|nn|gardin|f|n}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|cortina|f}}
 * Pashto: {{t+|ps|پرده|tr=parda}}, {{t+|ps|پېڅول|tr=paissawal }}
