--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -22,10 +22,11 @@ Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|
 {{zh-pron
 |m=xīng,er=y
 |c=sing1,seng1
-|c-t=lhen1
+|c-t=lhiang1-4,lhen1
+|c-t_note=lhiang1-4 - vernacular; lhen1 - literary
 |h=pfs=sên
 |md=sĭng
-|mn=xm,qz,lk,sx,tp,km,mg,hc:chhiⁿ/zz,yl,tn,kh,tc:chheⁿ/seng
+|mn=xm,qz,lk,sx,tp,km,mg,hc:chhiⁿ/zz,yl,tn,kh,tc,pn:chheⁿ/seng
 |mn_note=chhiⁿ/chheⁿ - vernacular; seng - literary
 |mn-t=cên1
 |w=1xin
