--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -51,6 +51,9 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 ====Synonyms====
 * {{l|en|articulate}}, {{l|en|talk}}, {{l|en|verbalize}}
 
+====Antonyms====
+* {{l|en|be silent}}
+
 ====Derived terms====
 {{rel-top|Terms derived from ''speak'' (verb)}}
 * {{l|en|public speaking}}
