t+gl:[[Reino Unido]] ([[WT:EDIT|Assisted]]) <United Kingdom#42363837>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -49,6 +49,7 @@
 * Faroese: {{t|fo|Hitt Sameinda Kongsríki|n}}
 * Finnish: {{t+|fi|Yhdistynyt kuningaskunta}}
 * French: {{t+|fr|Royaume-Uni|m}}, {{t+|fr|Royaume-Uni de Grande-Bretagne et d'Irlande du Nord|m}}
+* Galician: {{t+|gl|Reino Unido|m}}
 * Georgian: {{t|ka|გაერთიანებული სამეფო|sc=Geor}}
 * German: {{t+|de|Vereinigtes Königreich|n}}
 *: Bavarian: {{t|bar|Vaeinigte Kinireich}}
