--- a/en/停/停.11116.wikitext
+++ b/en/停/停.11116.wikitext
@@ -12,6 +12,7 @@
 
 ==Chinese==
 {{zh-forms}}
+[[File:Stop sign China.svg|thumb]]
 
 ===Glyph origin===
 {{Han etym}}
@@ -29,8 +30,8 @@
 |cat=v
 }}
 
-===Verb===
-{{zh-verb}}
+===Definitions===
+{{zh-hanzi}}
 
 # to [[stop]], to [[halt]]
 # to [[park]] (a car)
