--- a/en/旯/旯.16919.wikitext
+++ b/en/旯/旯.16919.wikitext
@@ -12,24 +12,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[lo1]]|y=lo1}}
+===Pronunciation===
+{{zh-pron
+|m=lá
+|c=lo1
+|cat=
+}}
 
-# {{defn|lang=yue|sort=日02}}
+===Definitions===
+{{zh-hanzi}}
 
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[lá]] ([[la2]]), [[xù]] ([[xu4]])|wg=la<sup>2</sup>, hsü<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日02}}
+# {{rfdef|zh}}
 
 ====Compounds====
-* [[旮旯]]
+{{zh-der|山旮旯子|旮旯兒|旮旯}}
 
 ----
 
