--- a/en/旮/旮.16918.wikitext
+++ b/en/旮/旮.16918.wikitext
@@ -12,24 +12,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[go1]]|y=go1}}
+===Pronunciation===
+{{zh-pron
+|m=gā
+|c=go1
+|cat=
+}}
 
-# {{defn|lang=yue|sort=日02}}
+===Definitions===
+{{zh-hanzi}}
 
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[gā]] ([[ga1]]), [[xù]] ([[xu4]])|wg=ka<sup>1</sup>, hsü<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日02}}
+# {{rfdef|zh}}
 
 ====Compounds====
-* [[旮旯]]
+{{zh-der|山旮旯子|旮旯兒|旮旯}}
 
 ----
 
