--- a/en/昃/昃.16939.wikitext
+++ b/en/昃/昃.16939.wikitext
@@ -13,12 +13,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zak1]]|y=jak1}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=日04}}
+===Pronunciation===
+{{zh-pron
+|m=zè
+|c=zak1
+|mc=
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|日昃|昃食宵衣|日昃忘食|日中則昃|昏昃|昃晷}}
 
 ----
 
@@ -40,16 +56,6 @@
 {{ko-hanja|hangeul=치|eumhun=|rv=chi|mr=ch'i|y=chi}}
 
 # {{defn|lang=ko|sort=日04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zè]] ([[ze4]])|wg=tse<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
-
 ----
 
 ==Vietnamese==
