--- a/en/倬/倬.11050.wikitext
+++ b/en/倬/倬.11050.wikitext
@@ -12,12 +12,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[coek3]]|y=cheuk3}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=人08}}
+===Pronunciation===
+{{zh-pron
+|m=zhuō
+|c=zoek3,coek3
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+===References===
+* {{R:yue:mfccd}}
 
 ----
 
@@ -39,15 +55,6 @@
 {{ko-hanja|hangeul=탁|rv=tak|mr=t'ak}}
 
 # {{defn|lang=ko|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhuō]] ([[zhuo1]])|wg=cho<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 ----
 
