--- a/en/偪/偪.11130.wikitext
+++ b/en/偪/偪.11130.wikitext
@@ -15,12 +15,28 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=bik1|y=bik1}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=人09}}
+===Pronunciation===
+{{zh-pron
+|m=bī
+|c=bik1
+|mc=y
+|oc=y
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
+
+====Compounds====
+{{zh-der|偪臣|僭上偪下|偪陽|偪仄|偪仂|偪側}}
 
 ----
 
@@ -46,15 +62,6 @@
 
 # [[compel]], [[force]]
 # [[narrow]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[bī]] ([[bi1]])|wg=pi<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 ----
 
