--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -102,6 +102,7 @@ From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|ang|pullian||to 
 * Finnish: {{t|fi|vaikutusvalta}}
 {{trans-mid}}
 * French: {{t+|fr|influence|f}}
+* Russian: {{t|ru|козыри|p}} {{qualifier|idiomatic}}
 {{trans-bottom}}
 
 {{trans-top|appeal}}
