--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -63,6 +63,7 @@ From {{etyl|enm|en}} {{m|enm|coate}}, {{m|enm|cotte}}, from {{etyl|fro|en}} {{m|
 * Azeri: {{t+|az|palto}}
 * Belarusian: {{t|be|паліто́|n|sc=Cyrl}}, {{t|be|пальто́|n|sc=Cyrl}}, {{t|be|пінжа́к|m|sc=Cyrl}} {{qualifier|jacket}}
 * Bulgarian: {{t+|bg|сако|n|sc=Cyrl}}, {{t+|bg|жакет|m|sc=Cyrl}}, {{t+|bg|пардесю́|n}}, {{t+|bg|палто́|n}}
+* Burmese: {{t+|my|အင်္ကျီ}}, {{t+|my|လောင်းကုတ်အင်္ကျီ}}
 * Catalan: {{t+|ca|abric|m}}, {{t+|ca|casaca|f}}
 * Chichewa: {{t|ny|khothi}}
 * Chinese:
