--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=06|sn=9|four=10104|canj=MWG,XMWG|ids=⿱覀土/西土(depending on font)}}
+{{Han char|rn=32|rad=土|as=06|sn=9|four=10104|canj=MWG,XMWG|ids=⿱覀土(GV),⿱西土(HTJK)}} <!-- Different composition depending on region, GV for mainland China/Vietnam, HTJK for Hong Kong/Taiwan/Japan/Korea -->
 
 # to [[restrain]]
 # to [[dam]] a [[stream]] and [[change]] its [[direction]]
