--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -6,7 +6,9 @@
 From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, from {{etyl|ML.|en}} {{m|la|tortuca}}, of uncertain origin. May be from {{etyl|LL.|en}} {{m|la|tartarūcha}}, from {{etyl|LL.|en}} {{m|la|tartarūchus}}, from {{etyl|grc|en}} {{m|grc|ταρταροῦχος||holder of Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld and they were commonly paired with such infernal beasts; or from {{etyl|la|en}} {{m|la|tortus||twisted}}.
 
 ===Pronunciation===
-* {{IPA|/ˈtɔː(ɹ)təs/|lang=en}}
+* {{a|GA}} {{IPA|/ˈtɔːɹ.təs/|lang=en}}
+* {{a|RP}} {{IPA|/ˈtɔː.təs/|lang=en}}
+** {{a|UK|also}} {{IPA|/ˈtɔːˌtɔɪs/|lang=en}}
 * {{audio|en-us-tortoise.ogg|Audio (US)|lang=en}}
 * {{rhymes|ɔː(ɹ)təs|lang=en}}
 
