--- a/en/昋/昋.16947.wikitext
+++ b/en/昋/昋.16947.wikitext
@@ -11,24 +11,30 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[gwai3]]|y=gwai3}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=日04}}
+===Pronunciation===
+{{zh-pron
+|m=guì
+|c=gwai3
+|mn=
+|mc=
+|oc=
+|ma=
+|cat=
+}}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|zh}}
 
 ====References====
 * [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[guì]] ([[gui4]])|wg=kuei<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
 
 [[fr:昋]]
 [[pl:昋]]
