--- a/en/昰/昰.16984.wikitext
+++ b/en/昰/昰.16984.wikitext
@@ -27,6 +27,11 @@
 |cat=v,pn
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
+
 ====References====
 * (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
 
