--- a/en/惮/惮.15619.wikitext
+++ b/en/惮/惮.15619.wikitext
@@ -14,6 +14,18 @@
 
 ==Chinese==
 {{zh-see|憚}}
+----
+==Japanese==
+
+===Kanji===
+{{ja-kanji|grade=|rs=心09}}
+
+# {{defn|lang=ja|sort=心09}}
+
+====Readings====
+* {{ja-readings|on=[[たん]] (tan), [[た]] (ta), [[だん]] (dan)|kun=[[はばかる]] (habakaru), [[はばかり]] (habakari)}}
+
+----
 
 [[fr:惮]]
 [[mg:惮]]
