--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -61,7 +61,7 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * Asturian: {{t+|ast|puertu|m}}
 * Azeri: {{t+|az|liman}}, {{t+|az|port}}
 * Belarusian: {{t|be|порт|m|sc=Cyrl}}, {{t|be|га́вань|f|sc=Cyrl}}
-* Bengali: {{t+|bn|বন্দর|tr=bôndôr|sc=Beng}}, {{t|bn|পোর্ট|tr=porţ|sc=Beng}}
+* Bengali: {{t+|bn|বন্দর|sc=Beng}}, {{t|bn|পোর্ট|sc=Beng}}
 * Breton: {{t+|br|porzh|m}}
 * Bulgarian: {{t+|bg|порт|m|sc=Cyrl}}, {{t+|bg|приста́нище|n|sc=Cyrl}}
 * Burmese: {{t+|my|သင်္ဘောဆိပ်|sc=Mymr}}, {{t+|my|ဆိပ်}}
@@ -136,7 +136,7 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * Tamil: {{t+|ta|துறைமுகம்|sc=Taml}}
 * Tatar: {{t|tt|порт|sc=Cyrl}}
 * Telugu: {{t+|te|ఓడరేవు|sc=Telu}}
-* Thai: {{t+|th|ท่าเรือ|tr=tâa reua|sc=Thai}}, {{t+|th|ท่า|tr=tâa|sc=Thai}}, {{t|th|พอร์ต|tr=pôt|sc=Thai}}
+* Thai: {{t+|th|ท่าเรือ|sc=Thai}}, {{t+|th|ท่า|sc=Thai}}, {{t|th|พอร์ต|sc=Thai}}
 * Turkish: {{t+|tr|liman}}
 * Turkmen: {{t|tk|port}}
 * Ukrainian: {{t|uk|порт|m|sc=Cyrl}}, {{t|uk|га́вань|f|sc=Cyrl}}
