--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -64,7 +64,7 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * Bengali: {{t+|bn|বন্দর|sc=Beng}}, {{t|bn|পোর্ট|sc=Beng}}
 * Breton: {{t+|br|porzh|m}}
 * Bulgarian: {{t+|bg|порт|m|sc=Cyrl}}, {{t+|bg|приста́нище|n|sc=Cyrl}}
-* Burmese: {{t+|my|သင်္ဘောဆိပ်|sc=Mymr}}, {{t+|my|ဆိပ်}}
+* Burmese: {{t+|my|သင်္ဘောဆိပ်|sc=Mymr}}, {{t+|my|ဆိပ်}}, {{t+|my|ဆိပ်ကမ်း}}
 * Catalan: {{t+|ca|port|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|港|tr=gǎng|sc=Hani}}, {{t+|cmn|港口|tr=gǎngkǒu|sc=Hani}}, {{t+|cmn|口岸|tr=kǒu'àn|sc=Hani}}, {{t+|cmn|港埠|tr=gǎngbù|sc=Hani}}
