--- a/en/做/做.11114.wikitext
+++ b/en/做/做.11114.wikitext
@@ -19,14 +19,16 @@ Colloquial form of the departing-tone variant of {{ltc-l|作|to do|id=2}}, to di
 ===Pronunciation===
 {{zh-pron
 |m=zuò
-|ma=y
 |c=zou6
 |h=pfs=cho
 |md=có̤
-|mn=xm,qz,lk,tp,km,mg,hc:chòe/zz,yl,tn,kh,tc:chò/sx:cherè
+|mn=xm,qz,lk,tp,km,mg,hc:chòe/ml,yl,tn,kh,tc:chò/sx:chère
+|mn_note=Xiamen, Quanzhou: chòe - vernacular; chò - literary
+|mn-t=zo3
 |w=2tsu
 |mc=y
 |oc=y
+|ma=y
 |cat=v
 }}
 
