--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -26,8 +26,10 @@
 |c=dei6,deng6
 |h=pfs=thi
 |md=dê
-|mn=tè/xm,qz,zz,kh,tn,yl:tē/xm,qz,tp,lk,km,mg,hc,tc:tōe/lk:tǒe/sx:terē/xm,qz,tw:tī
-|mn_note=tè - vernacular (possibly substitute for {{zh-l|帶*}}); tē/tōe/tǒe/terē, tī - literary
+|mn=xm,qz,tp,lk,km,mg,hc,tc:tōe/ml,kh,tn,yl:tē/lk:tǒe/sx:tēre/tī/xm,zz,tw:tè/qz:tèr
+|mn_note=Xiamen, Quanzhou: tōe - vernacular; tē - literary
+Zhangzhou, Taiwan: tē/tōe/tǒe/tēre - literary
+Other readings: tī - only used in {{zh-l|*土地公}}; tè/tèr - vernacular (likely substitute for {{zh-l|帶*}})
 |w=3di
 |mc=y
 |oc=y
