--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -24,7 +24,11 @@
 {{zh-pron
 |m=dì
 |c=dei6,deng6
-|h=pfs=thi
+|c_note=deng6 - usually written as {{zh-l|埞}}
+|c-t=ei5,ei5*
+|g=ti5
+|h=pfs=thi;gd=ti4
+|j=di3
 |md=dê
 |mn=xm,qz,tp,lk,km,mg,hc,tc:tōe/ml,kh,tn,yl:tē/lk:tǒe/sx:tēre/tī/xm,zz,tw:tè/qz:tèr
 |mn_note=Xiamen, Quanzhou: tōe - vernacular; tē - literary
@@ -33,6 +37,7 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 |mn-t=di7/do3
 |mn-t_note=di7 - literary; do3 - vernacular (e.g. {{zh-l|*洗地}}, {{zh-l|*掃地}}, {{zh-l|*鎮地}})
 |w=3di
+|x=di5
 |mc=y
 |oc=y
 |ma=y
