--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -23,7 +23,7 @@
 ====Pronunciation====
 {{zh-pron
 |m=dì
-|c=dei6,deng6
+|c=dei6,dei6-2,deng6
 |c_note=deng6 - usually written as {{zh-l|埞}}
 |c-t=ei5,ei5*
 |g=ti5
