--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -77,6 +77,7 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 |m=de,di
 |m_note=di is used in poetry, songs
 |c=dei6,dei6-2
+|c_note=dei6 - literary; dei6-2 - vernacular, only used after reduplicated words
 |mn-t=di7
 |ma=y
 |dial=n
@@ -87,7 +88,9 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 {{zh-hanzi}}
 
 # {{n-g|Particle indicating the word preceding it is used as an adverb.}}
-#: {{zh-x|很 快 地{de}|very quickly}}
+#: {{zh-x|很 快 地{de}|very quick'''ly'''}}
+#: {{zh-x|佢 偷偷 地{dei6-2} 走 咗 喇。|He secret'''ly''' left.|C}}
+#* {{zh-x|你 乖 乖 地{dei6-2} 坐 喺度 喇 吓。|Sit here and behave, ok?|C}}
 
 =====Usage notes=====
 * The use of this particle is always optional after polysyllabic adverbs. 
@@ -101,6 +104,31 @@ Other readings: tī - vernacular (may be considered literary, only used in {{zh-
 {{zh-der|fold=1|忙不迭地|仆地|怎地|呆呆地|嚭嚭地|沒地|撇地|沒地里|沒揣地|撲搭地}}
 
 ===Etymology 3===
+{{rfe|zh|related to etymology 2?}}
+
+====Pronunciation====
+{{zh-pron
+|c=dei6-2
+|dial=n
+|cat=suffix
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# {{lb|zh|Cantonese}} {{n-g|Placed after a reduplicated adjective or stative verb to lessen its intensity.}}
+#: {{zh-x|紅 紅{hung4-2} 地{dei6-2}|'''kind of''' red|C}}
+#: {{zh-x|薄 薄{bok6-2} 地{dei6-2}|'''kind of''' thin|C}}
+#: {{zh-x|驚 驚 地{dei6-2}|to be '''kind of''' scared|C}}
+#: {{zh-x|矮 矮 地{dei6-2}|'''kind of''' tall|C}}
+
+=====Usage notes=====
+* This suffix is accompanied by a tone change in the reduplicated word, where the second occurrence is changed to the second tone (unless its original tone is the first or second tone), as seen in the examples above.
+
+====Compounds====
+{{zh-der|fold=1|假假地|偷偷地}}
+
+===Etymology 4===
 {{zh-see|哋|v|''Cantonese plurality marker''}}
 
 {{zh-cat|Beginning}}
