--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -201,6 +201,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 
 [[Category:en:Colors]]
 [[Category:en:Hair]]
+[[Category:en:People]]
 
 ----
 
