--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -72,7 +72,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 * Bengali: {{t|bn|ইসরায়েল}}
 * Breton: {{t|br|Israel}}
 * Bulgarian: {{t+|bg|Изра́ел|m}}
-* Burmese: {{t|my|အစ္စရေး|sc=Mymr}}, {{t|my|အစ္စရေးနိုင်ငံ|sc=Mymr}}
+* Burmese: {{t|my|အစ္စရေး|sc=Mymr}}
 * Catalan: {{t+|ca|Israel|m}}
 * Central Atlas Tamazight: {{t|tzm|ⵉⵙⵔⴰⵢⵉⵍ}}
 * Chechen: {{t|ce|Израиль}}
