--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -21,7 +21,7 @@
 
 ===Glyph origin===
 {{Han etyl}}
-Originally a {{Han compound|早|止|ls=psc|c1=s|c2=p|nocap=1}}, but the original meaning is unclear. It has been suggested that {{zh-l|*早}} looks like a spoon, so {{zh-l|*是}} may have been the original character for {{och-l|匙|spoon}}. As early as in late bronze inscriptions, {{zh-l|*早}} was replaced with {{zh-l|*日}} to give {{zh-l|*昰}}, which carried over to the small seal script, and ''{{w|Shuowen}}'' considers this a compound of {{Han compound|日|正|t1=sun|t2=upright; right}} (i.e. as the upright sun).
+Originally a {{Han compound|早|止|ls=psc|c1=s|c2=p|nocap=1}}, but the original meaning is unclear. It has been suggested that {{zh-l|*早}} looks like a spoon, so {{zh-l|*是}} may have been the original character for {{och-l|匙|spoon}}. As early as in late bronze inscriptions, the lower part of {{zh-l|*早}} split off and combined with {{zh-l|*止}} to give {{zh-l|*昰}}, which carried over to the small seal script, and ''{{w|Shuowen}}'' considers this a compound of {{Han compound|日|正|t1=sun|t2=upright; right}} (i.e. as the upright sun).
 
 ===Etymology===
 “This [an independent pronoun] > be right, correct, to be, so”. From {{inh|zh|sit-pro|*m-daj ~ m-di||that; this}}. Cognate with {{cog|bo|དེ||that}}, {{cog|kac|dai}}, {{m|kac|ndai||this}}.
