t+ka:[[ე.ი.]] ([[WT:EDIT|Assisted]]) <i.e.#42458579>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -40,7 +40,7 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||it is}}.
 * Finnish: {{t+|fi|eli}} (not recommended, dated: {{t+|fi|l.}}), {{t+|fi|ts.}}
 * French: {{t+|fr|c.-à-d.}}, {{t+|fr|c'est-à-dire}}
 * Galician: {{t+|gl|é dicir}}, {{t|gl|ou sexa}}
-* Georgian: {{t|ka|ესე იგი}}
+* Georgian: {{t|ka|ესე იგი}}, {{t|ka|ე.ი.}}
 * German: {{t+|de|d. i.}} (pl. {{t|de|d. s.}}), {{t+|de|d. h.}}
 * Greek: {{t+|el|δηλ.}}, {{t+|el|δηλαδή}}
 * Hebrew: {{t|he|דהיינו|tr=deháinu}}, {{t|he|כלומר|tr=klomár}}, {{t|he|זאת אומרת|tr=zót oméret}}
