--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -38,6 +38,7 @@ The character {{lang|zh|春}} itself is probably a variant of {{och-l|屯}} as t
 |h=pfs=chhûn
 |md=chŭng
 |mn=chhun
+|mn-t=cung1 
 |w=1tshen
 |mc=y
 |oc=y
