--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -37,7 +37,7 @@ The character {{lang|zh|春}} itself is probably a variant of {{och-l|屯}} as t
 |c=ceon1
 |h=pfs=chhûn
 |md=chŭng
-|mn=chhun
+|mn=chhun/chhung
 |mn-t=cung1 
 |w=1tshen
 |mc=y
