--- a/en/昏/昏.16951.wikitext
+++ b/en/昏/昏.16951.wikitext
@@ -20,8 +20,8 @@
 |m=hūn
 |c=fan1
 |h=pfs=fûn
-|mn=hng/hun
-|mn_note=hng - vernacular, hun - literary
+|mn=hun/qz,tw,xm:hng/zz:huiⁿ
+|mn_note=hun - literary; hng/huiⁿ - vernacular
 |mc=y
 |oc=y
 |ma=Zh-hun.ogg
