--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -40,6 +40,7 @@ From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{
 * {{l|en|chosen}}
 
 =====Translations=====
+{{trans-see|to choose|take}}
 {{trans-top|to pick}}
 * Afrikaans: {{t|af|kies}}
 * Albanian: {{t+|sq|zgjedh}}
