--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -50,6 +50,7 @@ From {{etyl|enm|en}} {{m|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to co
 | {{l|en|costless}}
 | {{l|en|costly}}
 | {{l|en|cost-push}}
+| {{l|en|high-cost}}
 | {{l|en|low-cost}}
 }}
 
