--- a/en/垈/垈.13067.wikitext
+++ b/en/垈/垈.13067.wikitext
@@ -12,23 +12,14 @@
 ==Chinese==
 {{zh-forms}}
 
+===Glyph origin===
+{{Han compound|代|土|ls=psc|c1=p|c2=s|t2=earth; dust}}.
+
 ===Pronunciation===
 {{zh-pron
 |m=dài
-|m-s=
 |c=doi6
-|c-t=
-|g=
-|h=pfs=
-|j=
-|md=
-|mn=
-|mn-t=
-|w=
-|x=
-|mc=y
-|oc=y
-|cat=n
+|cat=
 }}
 
 ===Definitions===
