--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -28,7 +28,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Afrikaans: {{qualifier|tortoise or turtle}} {{t|af|skilpad}}
 * Akkadian: {{t|akk|𒃻𒅮𒈾|tr=šeleppû|sc=Xsux}}
 * Albanian: {{qualifier|tortoise or turtle}} {{t+|sq|breshkë|f}}
-* Arabic: {{qualifier|tortoise or turtle}} {{t|ar|سُلَحْفَاة|f}}, {{t|ar|سَلَاحِف|p}}
+* Arabic: {{qualifier|tortoise or turtle}} {{t|ar|سُلَحْفَاة|f}}
 *: Egyptian Arabic: {{t|arz|سحلفة|f|tr=suḥlefa|sc=Arab}}
 * Armenian: {{t+|hy|կրիա}}
 * Aromanian: {{t|rup|broascã|f}}, {{t|rup|broascã tsãstoasã|f}}
