t+my:[[တွေ့]] ([[WT:EDIT|Assisted]]) <find#42541442>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -101,7 +101,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Bengali: {{t-needed|bn}}
 * Breton: {{t+|br|kavout}}
 * Bulgarian: {{t+|bg|нами́рам|impf|sc=Cyrl}}
-* Burmese: {{t-needed|my}}
+* Burmese: {{t+|my|တွေ့}}
 * Catalan: {{t+|ca|trobar}}
 * Chechen: {{t-needed|ce}}
 * Chinese:
