--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -38,7 +38,7 @@ Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|
 
 ===Definitions===
 {{zh-hanzi}}
-
+[[File:Five Stars (32990311546).jpg|thumb|150px|Five-star shapes]]
 # [[star]]; [[planet]]; [[heavenly body]]
 #: {{zh-x|星星{xing}|star}}
 #: {{zh-x|恆星|(fixed) '''star'''}}
