--- a/en/昌/昌.16948.wikitext
+++ b/en/昌/昌.16948.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=04|sn=8|four=60600|canj=AA|ids=⿱日日}}
+{{Han char|rn=72|rad=日|as=04|sn=8|four=60600|canj=AA|ids=⿱日曰}}
 # [[light]] of [[sun]]
 # [[good]], [[proper]]
 # [[beautiful]], [[lovely]]
