removed [[Category:en:Hordeeae tribe plants]]; added [[Category:en:Hordeeae tribe grasses]] using [[Help:Gadget-HotCat|HotCat]] <spelt#42561919>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -92,7 +92,7 @@ From {{etyl|gmh|en}} {{m|gmh|spalden}}, or {{etyl|non|en}} {{m|non|spald}}.
 * {{l|en|pelts}}, {{l|en|slept}}
 
 [[Category:en:Grains]]
-[[Category:en:Hordeeae tribe plants]]
+[[Category:en:Hordeeae tribe grasses]]
 
 ----
 
