Reverted edits by [[Special:Contributions/86.191.208.96|86.191.208.96]]. If you think this rollback is in error, please leave a message on my [[User talk:Metaknowledge|talk page]]. <come#42601841>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -4,12 +4,15 @@
 
 ===Etymology 1===
 {{PIE root|en|gʷem}}
-front of front of front of front of front of front of front of the the the the 3 3 3 3 3 3 {{rel-top|cognates}}
-kommen kommen I I and and and and I have have have have have have have have a a new new new new new new new new new new new new new new year year year year year year year year year year year year year year https:// d and and the the the the the the first time I I I have have a few a few a few questions about a
-be be be 
-Cognate to English {{m|en|basis}}, from PIE be be be be be be be be be there there there aa Ancient Greek.
+From {{etyl|enm|en}} {{m|enm|comen}}, {{m|enm|cumen}}, from {{etyl|ang|en}} {{m|ang|coman}}, {{m|ang|cuman||to come, go, happen}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kwemaną||to come}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gʷem-||to step}}.
+{{rel-top|cognates}}
+Cognate from Proto-Germanic with {{cog|sco|cum||to come}}, {{cog|stq|kuume||to come}}, {{cog|fy|komme||to come}}, {{cog|nds|kamen||to come}}, {{cog|nl|komen||to come}}, {{cog|de|kommen||to come}}, {{cog|nb|-}} and {{cog|da|komme||to come}}, {{cog|sv|komma||to come}}, {{cog|nn|-}} and {{cog|is|koma||to come}}.
+
+Cognate from PIE via Latin {{m|la|veniō||come, arrive}} with many Romance language terms (e.g., French {{m|fr|venir}}, Portuguese {{m|pt|vir}}, Spanish {{m|es|venir}}), Lithuanian {{m|lt|gimti||to be born, come into the world, arrive}}, with terms in Iranian languages (e.g. {{cog|ae|𐬘𐬀𐬨𐬀𐬌𐬙𐬌|t=to go}}), via Sanskrit {{m|sa|sc=Deva|गच्छति||tr=gácchati|to go}} with many Indic language terms (e.g., Hindi {{m|hi|गति|tr=gati}}).
+
+Cognate to English {{m|en|basis}}, from PIE via Ancient Greek.
 {{rel-bottom}}
-I 
+
 ====Pronunciation====
 * {{a|UK}} {{IPA|/kʌm/|[kʰɐm]|lang=en}}, {{enPR|kŭm}}
 * {{audio|En-uk-to come.ogg|Audio (UK)|lang=en}}
