t+vi:[[Anh Quốc]] t-balance ([[WT:EDIT|Assisted]]) <United Kingdom#42610489>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -75,8 +75,8 @@
 * Kurdish: {{t|ku|Keyaniya Yekbûyî|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|Бириккен Падышалык}}
 * Lao: {{t+|lo|ສະຫະລາຊະອານາຈັກ}}
-{{trans-mid}}
 * Latin: {{t|la|Britanniarum Regnum|n}}, {{t|la|Rēgnum Ūnītum|n}}
+{{trans-mid}}
 * Latvian: {{t|lv|Apvienotā Karaliste|f}}, {{t|lv|Lielbritānijas un Ziemeļīrijas Apvienotā Karaliste|f}}
 * Lithuanian: {{t+|lt|Jungtinė Karalystė}}
 * Macedonian: {{t+|mk|Обединето Кралство|n}}
@@ -129,7 +129,7 @@
 * Ukrainian: {{t|uk|Сполу́чене Королі́вство|n}}
 * Urdu: {{t|ur|مملکت متحدہ|tr=mamlakat muttahida|sc=ur-Arab}}, {{t|ur|یونائٹڈ کنگڈم|tr=yūnā'iṭeḍ kiṅgḍam|sc=ur-Arab}}
 * Uzbek: {{t+|uz|Birlashgan Qirollik}}
-* Vietnamese: {{t+|vi|Vương quốc Anh}}
+* Vietnamese: {{t+|vi|Vương quốc Anh}}, {{t+|vi|Anh Quốc}}
 * Võro: {{t|vro|Ühendkuningriik}}
 * Welsh: {{t|cy|Teyrnas Unigol|f|alt=Y Deyrnas Unigol}}
 * West Frisian: {{t|fy|Feriene Keninkryk}}
