--- a/en/慍/慍.15712.wikitext
+++ b/en/慍/慍.15712.wikitext
@@ -17,12 +17,17 @@
 
 ===Pronunciation===
 {{zh-pron
-|m=yùn,zhé
+|m=yùn
 |c=wan3
 |mn=qz,tw,xm,zz:ùn
 |ma=
 |cat=a
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
