--- a/en/偬/偬.11132.wikitext
+++ b/en/偬/偬.11132.wikitext
@@ -12,12 +12,13 @@
 
 ----
 
-==Cantonese==
+==Chinese==
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zung2]]|y=jung2}}
+===Glyph origin===
+{{Han etym}}
 
-# {{defn|lang=yue|sort=人09}}
+===Definitions===
+{{zh-see|傯}}
 
 ----
 
@@ -39,15 +40,6 @@
 {{ko-hanja|hangeul=총|rv=chong|mr=ch'ong}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=傯|pin=[[zǒng]] ([[zong3]])|wg=tsung<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偬]]
 [[li:偬]]
