--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -1,10 +1,10 @@
 {{character info/new}}
 {{also|易}}
+
 ==Translingual==
 
-===Etymology===
-{{Han etyl}}
-{{Han compound|日|示|彡|t1=sun|ls=ic}} The rays of the sun.
+===Alternative forms===
+* {{zh-l|𠃓}} (used only as a component for derived characters in {{w|simplified Chinese}})
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=60227|canj=AMSH|ids=⿱旦勿}}
@@ -19,10 +19,11 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=𣆄}}
 
-===Alternative forms===
-* {{zh-l|𠃓}} (used only as a component)
+===Glyph origin===
+{{Han etym}}
+{{Han compound|日|示|彡|t1=sun|ls=ic}} The rays of the sun.
 
 ===Pronunciation===
 {{zh-pron
