t+gl:[[conversar]] ([[WT:EDIT|Assisted]]) <speak#42662009>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -255,6 +255,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 
 {{trans-top|to have a conversation}}
 * Finnish: {{t+|fi|puhua}}, {{t+|fi|keskustella}}, {{t+|fi|jutella}}
+* Galician: {{t+|gl|conversar}}
 * Italian: {{t+|it|conversare}}
 {{trans-mid}}
 * Meänkieli: {{t|fit|praatata}}
