Added another term <cut#42692715>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -35,7 +35,10 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * {{l|en|snithe}}
 
 ====Derived terms====
-* {{l|en|point-cut}}
+{{der2|lang=en
+| {{l|en|clear-cut}}
+| {{l|en|point-cut}}
+}}
 
 ====Related terms====
 {{rel2|lang=en|title=Related terms of ''cut'' (adjective)
