t+gv:[[shligganagh]] t+kw:[[kronek ervys]] t+kw:[[melhwioges]] t+kw:[[kroban]] ([[WT:EDIT|Assisted]]) <tortoise#42695131>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -45,6 +45,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Central Melanau: {{t|mel|kejaa}}
 * Chinese:
 *: Mandarin: {{qualifier|tortoise or turtle}} {{t+|cmn|龜|sc=Hani}}, {{t+|cmn|龟|tr=guī|sc=Hani}}, {{t+|cmn|烏龜|sc=Hani}}, {{t+|cmn|乌龟|tr=wūguī|sc=Hani}}, {{t+|cmn|王八|tr=wángba|sc=Hani}}, {{t|cmn|草龜|sc=Hani}}, {{t|cmn|草龟|tr=cǎoguī|sc=Hani}}
+* Cornish: {{t|kw|kronek ervys |m}}, {{t|kw|melhwioges|f}}, {{t|kw|kroban|m}}
 * Czech: {{t+|cs|želva}}
 * Danish: {{t+|da|skildpadde|c}}
 * Dutch: {{t+|nl|schildpad|f}}
@@ -84,6 +85,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Malay: {{t|ms|kura-kura}}
 * Malayalam: {{t+|ml|ആമ|sc=Mlym}}
 * Maltese: {{t|mt|fekruna|f}}, {{t|mt|fkieren|p}}
+* Manx: {{t|gv|shligganagh|m}}
 * Maori: {{t|mi|honuwhenua}}
 * Mi'kmaq: {{t|mic|migjigj|an}}
 * Nahuatl: {{t|nah|āyotl}}
