--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -21,7 +21,7 @@
 
 Three other forms were found in the oracle bone script:
 * {{zh-l|*朙}} < {{Han compound|囧|月|t1=window}} – the moon shining through a window – moonlight. This form was also prevalent in the ancient scripts and was considered to be the standard form in ''{{w|Shuowen}}''. See this form's entry for its historical forms.
-* {{zh-l|*眀}} < {{Han compound|目|月|t1=eye}} – bright eyes. This form was rarely attested, so it is still uncertain whether this form is actually equivalent to {{lang|zh|明}}. It reappeared in the bamboo script of the {{q|Qin dynasty}}, but this was probably a corruption of {{zh-l|*朙}}.
+* {{zh-l|*眀}} < {{Han compound|目|月|t1=eye}} – bright eyes. This form was rarely attested, so it is still uncertain whether this form is actually equivalent to {{lang|zh|明}}. It reappeared in the bamboo script of the {{w|Qin dynasty}}, but this was probably a corruption of {{zh-l|*朙}}.
 * {{Han compound|田|月}} – probably a corruption of the above forms.
 
 ===Pronunciation===
