t+ary:[[هدر]] ([[WT:EDIT|Assisted]]) <speak#42786586>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -101,6 +101,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Afrikaans: {{t|af|praat}}
 * Albanian: {{t+|sq|flas}}
 * Arabic: {{t|ar|تَحَدَّثَ}}, {{t|ar|تَكَلَّمَ}}
+*: Moroccan Arabic: {{t|ary|هْدر}}
 * Armenian: {{t+|hy|խոսել}}
 * Aromanian: {{t|rup|grescu}}, {{t|rup|zburãscu}}
 * Asturian: {{t+|ast|falar}}
