t+et:[[mängima]] ([[WT:EDIT|Assisted]]) <play#42803019>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -122,6 +122,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Danish: {{t|da|lege}}
 * Dutch: {{t+|nl|spelen}}
 * Esperanto: {{t|eo|ludi}}
+* Estonian: {{t|et|mängima}}
 * Faroese: {{t+|fo|spæla}}, {{t|fo|leika}}
 * Finnish: {{t+|fi|leikkiä}}
 * French: {{t+|fr|jouer}}, {{t+|fr|amuser|alt=s'amuser}}
