/* Derived terms */ <found#42834098>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -37,6 +37,7 @@ see {{m|en|find}}.
 =====Derived terms=====
 * {{l|en|found footage}}
 * {{l|en|lost and found}}
+* {{l|en|unfound}}
 
 ===Etymology 2===
 {{PIE root|en|ǵʰewd}}
