--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -26,7 +26,7 @@ There are minor differences in where the last stroke of the top component (top-l
 
 ===Glyph origin===
 {{Han etyl}}
-{{Han compound|艹|t1=grass|屯|t2=sprout|日|t3=sun|ls=psc|c1=s|c2=p|c3=s}}.
+{{Han compound|艸|屯|日|ls=psc|t1=grass|t2=sprout|t3=sun|c1=s|c2=p|c3=s}}.
 
 The character {{lang|zh|春}} itself is probably a variant of {{och-l|屯}} as they are equivalent for the meaning “spring” in Old Chinese literature.
 
