--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -25,8 +25,8 @@
 {{zh-pron
 |m=chuí
 |c=seoi4
-|mn=sôe/sûi/sê
-|mn_note=sôe - vernacular, sûi - literary
+|mn=sûi/qz:sêr/tw,xm:sê/tw,zz:sôe
+|mn_note=sûi - literary; sêr/sê/sôe - vernacular
 |mc=y
 |oc=y
 |cat=v
