--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -354,7 +354,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 {{trans-bottom}}
 
 [[Category:English reporting verbs]]
-[[Category:en:Weather]]
+{{topics|en|Atmospheric phenomena}}
 
 [[ang:thunder]]
 [[ar:thunder]]
