t+th:[[ฟ้าร้อง]] t-balance ([[WT:EDIT|Assisted]]) <thunder#42851843>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -114,8 +114,8 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Lithuanian: {{t|lt|griaustinis}}
 * Macedonian: {{t+|mk|гром|m|tr=grom}}
 * Malagasy: {{t+|mg|ampy}}
-* Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
 {{trans-mid}}
+* Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
 * Malayalam: {{t+|ml|ഇടി|sc=Mlym}}
 * Manchu: {{t|mnc|ᠠᡴᠵᠠᠨ|tr=akjan}}
 * Manx: {{t|gv|taarnagh|m}}
@@ -160,7 +160,7 @@ From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þu
 * Tamil: {{t+|ta|இடி|sc=Taml}}
 * Taos: {{t|twf|nąłàcit’ə́otuna}}
 * Telugu: {{t+|te|ఉరుము|sc=Telu}}
-* Thai: {{t|th|สายฟ้า|tr=săaifáa}}
+* Thai: {{t|th|สายฟ้า|tr=săaifáa}}, {{t|th|ฟ้าร้อง}}
 * Tibetan: {{t|bo|ལྡིར་སྒྲ|sc=Tibt}}
 * Turkish: {{t+|tr|gök gürültüsü}}
 * Tutelo: {{t|tta|tuhangrua}}
