t+it:[[taglio]] ([[WT:EDIT|Assisted]]) <cut#42860125>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -347,6 +347,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 {{trans-bottom}}
 
 {{trans-top|partition of a graph’s vertices into two subgroups}}
+* Italian: {{t+|it|taglio|m}}
 * Portuguese: {{t+|pt|corte|m}}
 {{trans-mid}}
 {{trans-bottom}}
