t+es:[[carne]] ([[WT:EDIT|Assisted]]) <flesh#42868916>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -204,6 +204,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * Polish: {{t+|pl|cielisty|m}}
 * Portuguese: {{t+|pt|bege}}
 * Russian: {{t+|ru|телесный}}
+* Spanish: {{t+|es|carne|f}}
 {{trans-bottom}}
 
 {{checktrans-top}}
