t+sh:[[reproducirati]] t+sh:[[puštati]] ([[WT:EDIT|Assisted]]) <play#42895979>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -412,6 +412,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Pashto: {{t+|ps|ږغول|tr=zhaγawəl|sc=ps-Arab}}
 * Polish: {{t+|pl|grać}}, {{t+|pl|odtwarzać}}, {{t+|pl|puścić}}
 * Portuguese: {{t+|pt|tocar}}, {{t+|pt|reproduzir}}
+* Serbo-Croatian: {{t+|sh|reproducirati|impf}}, {{t+|sh|puštati|impf}}
 * Slovene: {{t|sl|predvajati}}
 * Spanish: {{t+|es|reproducir}}
 * Swedish: {{t+|sv|spela}}, {{t+|sv|spela upp}}
