added [[Category:en:Ultimate]] using [[Help:Gadget-HotCat|HotCat]] <brick#42910566>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -332,6 +332,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * {{pedialite}}
 
 [[Category:en:Building materials]]
+[[Category:en:Ultimate]]
 
 ----
 
