--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -5,11 +5,6 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=45106|canj=GLWL|ids=⿰土申}}
 
-# [[earth]]
-# [[feminine]], [[female]]
-# 8th of the 8 [[w:Ba Gua|trigrams]]
-# [[second]] [[hexagram]] of the [[I Ching]]
-
 ====References====
 * {{Han ref|kx=0226.140|dkj=04969|dj=0461.280|hdz=10431.070|uh=5764|ud=22372|bh=A95B|bd=43355}}
 
@@ -23,15 +18,19 @@
 |m=kūn
 |c=kwan1
 |mn=khun
+|w=1khun
 |mc=y
 |oc=y
-|cat=
+|cat=n,a
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[earth]]
+# [[feminine]], [[female]]
+# 8th of the 8 [[w:Ba Gua|trigrams]]
+# [[second]] [[hexagram]] of the [[I Ching]]
 
 ====Compounds====
 {{zh-der|乾坤|乾坤一擲|乾坤再造|坤伶|坤儀|坤元|坤宅|坤宮|坤寧宮|坤德|坤戲|坤書|坤書館|坤極|坤範|坤維|坤角|坤軸|坤輿|坤造|坤靈|坤鞋|壺裡乾坤|弄乾坤|扭轉乾坤|旋乾轉坤|旋轉乾坤|浪蕩乾坤|顛乾倒坤|顛倒乾坤}}
@@ -58,7 +57,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=곤|rv=gon|mr=kon}}
+{{ko-hanja|hangeul=곤}}
 
 # ([[땅]] 곤, ''ttang-'') [[earth]]
 # ([[곤괘]] 곤, ''gongwae-'') {{lang|und|sc=Latinx|☷}} or the eighth of the [[Eight Trigrams]], ({{lang|und|sc=Latinx|☰☱☲☳☴☵☶☷}} or [[팔괘]] ([[w:Ba gua (concept)|八卦]], ''palgwae'')) that exactly match with the three-digit binary numbers, counting from 0 to 7. Four (0, 2, 5, 7) out of eight trigrams are placed in the four corners of the [[w:flag of South Korea|flag of South Korea]].
